# hw14_test

./: .env.example  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 260896420944_is_active_for_user.py  378b544a891a_added_roles_2.py  3d547cbb1c41_add_user_model.py  5087e484662f_initial_tables.py  76071fe84dce_avatar_for_user.py  e1ac5cf8bf94_added_roles.py
config/: db.py  general.py
src/auth/: mail_utils.py  models.py  pass_utils.py  repos.py  routers.py  schema.py  utils.py
src/contacts/: models.py  repos.py  routers.py  schema.py
src/templates/: email.html
src/tests/: conftest.py  test_auth.py  test_contacts.py  test_repos_auth.py  test_repos_contacts.py
src/users/: routers.py
